WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153226
[mips] Unaligned halfword load is not handled properly in macro assembler
https://bugs.webkit.org/show_bug.cgi?id=153226
Summary
[mips] Unaligned halfword load is not handled properly in macro assembler
Julien Brianceau
Reported
2016-01-19 01:02:06 PST
In mips macro assembler, the load16Unaligned(BaseIndex address, RegisterID dest) implementation is not efficient.
Attachments
Provide a load16Unaligned implementation in mips macro assembler
(3.86 KB, patch)
2016-01-19 01:16 PST
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2016-01-19 01:16:27 PST
Created
attachment 269259
[details]
Provide a load16Unaligned implementation in mips macro assembler Note: already contributed in qtwekbit
http://code.qt.io/cgit/qt/qtwebkit.git/commit/?id=ea22657d17a934b04c8621dc8891a1d4d80510e3
Julien Brianceau
Comment 2
2016-01-19 01:19:08 PST
SunSpider's regexp-dna results on my mips board: - without patch ============================================ RESULTS (means and 95% confidence intervals) -------------------------------------------- Total: 353.9ms +/- 0.5% -------------------------------------------- regexp: 353.9ms +/- 0.5% dna: 353.9ms +/- 0.5% - with patch ============================================ RESULTS (means and 95% confidence intervals) -------------------------------------------- Total: 136.5ms +/- 2.6% -------------------------------------------- regexp: 136.5ms +/- 2.6% dna: 136.5ms +/- 2.6%
Julien Brianceau
Comment 3
2016-04-12 06:39:14 PDT
Guillaume, do you have any feedback on this one ?
Guillaume Emont
Comment 4
2016-04-12 16:24:58 PDT
(In reply to
comment #3
)
> Guillaume, do you have any feedback on this one ?
I couldn't say whether this is the fastest solution, though it might well be. It looks correct to me, and it runs well on my device.
Michael Catanzaro
Comment 5
2016-07-14 05:37:58 PDT
Comment on
attachment 269259
[details]
Provide a load16Unaligned implementation in mips macro assembler rs=me. I don't understand all the code, but any error here would clearly be isolated to the MIPS platform, Guillaume has given his unofficial r+, it's been used in QtWebKit for almost two years, and no reviewer is working on MIPS.
Konstantin Tokarev
Comment 6
2016-07-14 10:17:56 PDT
Comment on
attachment 269259
[details]
Provide a load16Unaligned implementation in mips macro assembler Works fine here and improves benchmark results. cq+
WebKit Commit Bot
Comment 7
2016-07-14 10:39:04 PDT
Comment on
attachment 269259
[details]
Provide a load16Unaligned implementation in mips macro assembler Clearing flags on attachment: 269259 Committed
r203226
: <
http://trac.webkit.org/changeset/203226
>
WebKit Commit Bot
Comment 8
2016-07-14 10:39:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug